#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([How_Traffic_Control_Signals_Work],[0.22],
[John_Sauter@systemeyescomputerstore.com],
[How_Traffic_Control_Signals_Work],
["github@github.com:How_Traffic_Control_Signals_Work.git"])
AM_INIT_AUTOMAKE([tar-pax]) 
AC_CONFIG_SRCDIR([traffic_control_signals.py])

# Use maintainer mode because files extracted from a PDF file
# lose their modification dates, and we don't want the end user
# to need all the Autoconfigure software.
AM_MAINTAINER_MODE

# Checks for programs.
AM_PATH_PYTHON([3.10])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# Checks for system services.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

# End of file configure.ac
